# pihole-sync

./: .gitignore  Cargo.toml  Cross.toml  README.md  entrypoint.sh
.github/workflows/: binary.yml  build-binary.yml  build-docker.yml  build.yml  create-release.yml  docker-image.yml  docker-publish.yml  docker.yml  newdocker-publish.yml  release.yml
config/: config.yaml  example.config.yaml  pihole-sync.service
config-examples/: config.example.toml  example.config.toml  example.config.yaml  pihole-sync.service
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: config.example.toml
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs  pihole.rs  pihole_client.rs  sync.rs
src/cli/: app_password.rs  instances.rs  setup.rs  sync.rs
src/pihole/: client.rs  config_filter.rs  mod.rs
src/sync/: config_sync.rs  context.rs  groups.rs  lists.rs  mod.rs  runner.rs  teleporter.rs  tests.rs  triggers.rs  util.rs
tests/: auth.rs  e2e_api_lists_groups.rs  e2e_auth.rs  e2e_selective_sync.rs  selective_sync.rs
tests/common/: mod.rs  pihole.rs
