[package]
name = "pihole-sync"
version = "1.0.0-beta.5"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.12.0"
indicatif = "0.18.3"
serde_yaml = "0.9.34"
notify = "8"

[dev-dependencies]
testcontainers = "0.26.0"
tracing-log = "0.2.0"
tempfile = "3"
